@@ -1,5 +1,7 @@
 === HEAD
 
+* Add dataset_associations plugin for making dataset methods that return datasets of associated objects (jeremyevans)
+
 * Don't allow Model.def_dataset_method to override private model methods (jeremyevans)
 
 * Parsing primary key information from system tables in the shared MSSQL adapter (jeremyevans)
